concord_examples/tests/ui/duplicate_var_conflict.stderr
error: var `id` redefined with different type
  --> tests/ui/duplicate_var_conflict.rs:12:13
   |
12 |             id: String
   |             ^^
